@@ -1,5 +1,10 @@
 2020-03-26  Frank Ch. Eigler <fche@redhat.com>
 
+	* debuginfod.cxx (handler_cb): Export two families of metrics for
+	prometheus traffic analysis: response times and data amounts.
+
+2020-03-26  Frank Ch. Eigler <fche@redhat.com>
+
 	* debuginfod.cxx (parse_opt): For -U, prefer dpkg-deb
 	after all if access(3)-able, fallback to bsdtar.
 
